--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -143,7 +143,7 @@ iframe {
 
 .container-contact2 {
   width: 100%;  
-  min-height: 100vh;
+  min-height: 40vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -151,8 +151,8 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  padding: 15px;
+  /*align-items: center;*/
+  padding: 10px;
 
 }
 
@@ -161,7 +161,7 @@ iframe {
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
-  padding: 72px 55px 90px 55px;
+  padding: 10px 55px 20px 55px;
 }
 
 
@@ -170,6 +170,7 @@ iframe {
 
 .contact2-form {
   width: 100%;
+  
 }
 
 .contact2-form-title {
@@ -192,6 +193,7 @@ iframe {
   position: relative;
   border-bottom: 2px solid #adadad;
   margin-bottom: 37px;
+  
 }
 
 .input2 {
@@ -364,7 +366,7 @@ textarea.input2 + .focus-input2::after {
 
 @media (max-width: 576px) {
   .wrap-contact2 {
-    padding: 72px 15px 90px 15px;
+    padding: 72px 15px 30px 15px;
   }
 }
 
@@ -375,6 +377,7 @@ textarea.input2 + .focus-input2::after {
 
 .validate-input {
   position: relative;
+  
 }
 
 .alert-validate::before {
